<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_valorar_star"
        android:layout_gravity="center_horizontal"
        android:background="@color/blue"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_valora_titulo"
            android:textSize="25sp"
            android:gravity="center"
            android:padding="20dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_valora_descripcion"
            android:textSize="17sp"
            android:padding="20dp"
            android:layout_gravity="center"
            android:textColor="@color/dark_gray"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_height="wrap_content"
            android:text="@string/dialog_valora_btn_valora"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/blue"
            android:textSize="17sp"
            android:paddingRight="20dp"
            android:textStyle="bold"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_height="wrap_content"
            android:text="@string/dialog_valora_btn_no"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/dark_gray"
            android:textSize="17sp"
            android:paddingRight="20dp"/>
    </LinearLayout>





</LinearLayout>
